--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <title>
       Ecosyste.ms: Diff
     </title>
-    <meta name="description" content="An open API service to generate diffs between versions of packages from many open source ecosystems.">
+    <meta name="description" content="An open API service to generate diffs between package releases for many open source software ecosystems.">
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
@@ -20,7 +20,7 @@
         </h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">
-            An open API service to generate diffs between versions of packages from many open source ecosystems.
+            An open API service to generate diffs between package releases for many open source software ecosystems.
           </p>
         </div>
       </div>
