--- a/app/views/jobs/diff.html.erb
+++ b/app/views/jobs/diff.html.erb
@@ -20,7 +20,7 @@
       document.addEventListener('DOMContentLoaded', () => {
       const diffString = htmlDecode(document.getElementById('diff').innerHTML);
       const targetElement = document.getElementById('diff2html');
-      const configuration = { drawFileList: true, matching: 'lines', highlight: true, fileListStartVisible: true, fileContentToggle: false };
+      const configuration = { drawFileList: true, matching: 'lines', highlight: true, fileListStartVisible: true, fileContentToggle: false, stickyFileHeaders: true };
       const diff2htmlUi = new Diff2HtmlUI(targetElement, diffString, configuration);
       diff2htmlUi.draw();
       diff2htmlUi.highlightCode();
